# LanMeeting

./: .gitignore  CMakeLists.txt  package.bat
cmake/: CMakeCXXCompilerABI.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioTransport.cpp  AudioTransport.h
src/common/: Config.h  Logger.cpp  Logger.h
src/media/: MediaEngine.cpp  MediaEngine.h  MediaTransport.cpp  MediaTransport.h  ScreenShareTransport.cpp  ScreenShareTransport.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
src/net/: ControlClient.cpp  ControlClient.h  ControlServer.cpp  ControlServer.h
src/ui/: ChatMessageWidget.cpp  ChatMessageWidget.h  ScreenShareWidget.cpp  ScreenShareWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  theme.qrc  theme_mac.qss
